# Chat-Bot

app/: .env  Line-dify.py  main.py  pyproject.toml  test_dify_simple.py
app/BackEnd/: Line-dify.py  api_rag.py  main.py  structured_rag.py
