[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "DoraemonTCat",email = "peeframesave@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
